# semaphore-example

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.semaphore/: semaphore.yml
devops/: Dockerfile  Dockerfile-dev
src/: calculator.py
tests/: test_calculator.py
