[tool.poetry]
name = "ci"
version = "0.1.0"
description = ""
authors = ["Antoine Lefebvre-Brossard <antoinelb@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^1.12"
black = "^18.3-alpha.0"
pylint = "^2.2"
flake8 = "^3.6"
mypy = "^0.641.0"
pytest = "^4.0"
pytest-cov = "^2.6"
bandit = "^1.5"

[tool.black]
line_length = 79
py36 = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

